Updated theme uri

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Banshe
-Theme URI: http://bansherag.wordpress.com
+Theme URI: https://github.com/davidcornu/banshe_theme
 Description: Custom theme for http://bansherag.wordpress.com
 Author: Alyssa Favreau & David Cornu
 Version: 1.0
