--- a/style.css
+++ b/style.css
@@ -234,8 +234,9 @@ h1, h2, h3, h4, h5, h6 {
 
 .container .article .article-body img,
 .container .page .page-body img {
-	border: 5px solid #cecece;
-	border: 5px solid rgba(0,0,0,0.1);
+	border: 10px solid #cecece;
+	border: 10px solid rgba(0,0,0,0.1);
+	max-width: 970px;
 }
 
 .container .article .previous-next,
